# Badger_AI

./: .gitignore  IMPROVEMENT_BACKLOG.md  README.md  RESEARCH.md  SCOREBOARD_HISTORY.json  requirements.txt
visionhub_improved/: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker_requirements.txt  pyproject.toml  requirements.txt  train.py
visionhub_improved/assets/: CLASS_MAPPINGS.md  RTMDET_INFERENCE_GUIDE.md  TENSORRT_CONTAINER_LAMBDA.AI.md  TENSORRT_DEB_LAMBDA.AI.md
visionhub_improved/configs/: __init__.py
visionhub_improved/configs/detrdet/: __init__.py  detrdet_hgnetv2_l_custom.py  detrdet_hgnetv2_m_custom.py  detrdet_hgnetv2_n_custom.py  detrdet_hgnetv2_s_custom.py  detrdet_hgnetv2_x_custom.py
visionhub_improved/configs/detrpose/: __init__.py  detrpose_hgnetv2_l_custom.py  detrpose_hgnetv2_m_custom.py  detrpose_hgnetv2_n_custom.py  detrpose_hgnetv2_s_custom.py  detrpose_hgnetv2_x_custom.py
visionhub_improved/configs/rtmdet/: rtmdet_hgnetv2_l_custom.py  rtmdet_hgnetv2_m_custom.py  rtmdet_hgnetv2_n_custom.py  rtmdet_hgnetv2_s_custom.py  rtmdet_hgnetv2_x_custom.py
visionhub_improved/configs/rtmdetdet/: __init__.py  rtmdetdet_hgnetv2_l_custom.py  rtmdetdet_hgnetv2_m_custom.py  rtmdetdet_hgnetv2_n_custom.py  rtmdetdet_hgnetv2_s_custom.py  rtmdetdet_hgnetv2_x_custom.py
visionhub_improved/configs/rtmdetpose/: __init__.py  rtmdetpose_hgnetv2_l_custom.py  rtmdetpose_hgnetv2_m_custom.py  rtmdetpose_hgnetv2_n_custom.py  rtmdetpose_hgnetv2_s_custom.py
visionhub_improved/configs/rtmodet/: __init__.py  rtmodet_hgnetv2_l_custom.py  rtmodet_hgnetv2_m_custom.py  rtmodet_hgnetv2_n_custom.py  rtmodet_hgnetv2_s_custom.py  rtmodet_hgnetv2_x_custom.py
visionhub_improved/configs/rtmopose/: __init__.py  rtmopose_hgnetv2_l_custom.py  rtmopose_hgnetv2_m_custom.py  rtmopose_hgnetv2_n_custom.py  rtmopose_hgnetv2_s_custom.py
visionhub_improved/docker/: run.sh
visionhub_improved/notebooks/: DETRPose_Colab_Training_v2.ipynb  Native_Classifier_Colab_Training_v1.ipynb  RTMDetPose_Colab_Training_v2.ipynb  RTMOPose_Colab_Training_v2.ipynb  unified_colab_train.ipynb
visionhub_improved/src/: __init__.py
visionhub_improved/tools/: __init__.py
visionhub_improved/tools/benchmark/: dataset.py  get_info.py  requirements.txt  torch_benchmark.py  trt_benchmark.py
visionhub_improved/tools/deployment/: __init__.py  export_classifier_onnx.py  export_detection_onnx.py  export_detrdet_onnx.py  export_onnx.py  export_rtmdetdet_onnx.py  export_rtmdetpose_onnx.py  export_rtmo_onnx.py  export_rtmodet_onnx.py  export_tensorrt.py  export_tensorrt_windows.py
visionhub_improved/tools/inference/: annotators.py  checkpoint_metadata.py  class_mapping_utils.py  classifier_inf.py  classifier_onnx_inf.py  compare_pytorch_onnx.py  detect_cli.py  detection_cli.py  detection_utils.py  detrdet_inf.py  inference.py  model_info_cli.py  onnx_inf.py  pose_cli.py  report_utils.py  rtmdet_inf.py  rtmdetpose_inf.py  rtmo_inf.py  rtmodet_inf.py  trt_inf.py
visionhub_improved/tools/training/: __init__.py  classifier_train.py  detection_train.py  detrdet_train.py  rtmdet_train.py  rtmdetpose_train.py  rtmodet_train.py  train_detect.py
visionhub_improved/visionhub/: __init__.py  detection_variants.py
visionhub_improved/visionhub/cli/: __init__.py  _run.py  benchmark_info.py  benchmark_torch.py  benchmark_trt.py  export_classifier_onnx.py  export_detr_detect_onnx.py  export_onnx.py  export_rtmdet_onnx.py  export_rtmdetpose_onnx.py  export_rtmo_detect_onnx.py  export_rtmo_onnx.py  export_tensorrt.py  export_tensorrt_windows.py  infer_classifier.py  infer_classifier_onnx.py  infer_detect.py  infer_detr.py  infer_detr_detect.py  infer_onnx.py  infer_pose.py  infer_rtmdet_detect.py  infer_rtmdetpose.py  infer_rtmo.py  infer_rtmo_detect.py  infer_trt.py  main.py  model_info.py  train.py  train_classifier.py  train_detr_detect.py  train_rtmdet_detect.py  train_rtmdetpose.py  train_rtmo_detect.py
visionhub_improved/visionhub/data/: __init__.py  coco.py  coco_eval.py  container.py  dataloader.py  transforms.py
visionhub_improved/visionhub/misc/: box_ops.py  dist_utils.py  (+2 more)
(+106 files in other folders)
